--- a/hugo.toml
+++ b/hugo.toml
@@ -1,8 +1,38 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = 'https://vcscsvcscs.github.io/portfolio/'
+defaultContentLanguage = 'en'
+title = 'Csongor Csaba Vargha - Cloud Developer'
 
 # Use Hugo modules to add theme
 [module]
     [[module.imports]]
         path = "github.com/hugo-toha/toha/v4"
+
+# Language Configuration
+[languages]
+  [languages.en]
+    languageName = "English"
+    title = "Csongor Csaba Vargha - Cloud Developer"
+    weight = 1
+  [languages.hu]
+    languageName = "Magyar"  
+    title = "Vargha Csongor Csaba - Felhő Fejlesztő"
+    weight = 2
+
+# Basic theme configuration
+[params]
+  # Basic settings
+  showFlags = true
+  
+  # GitHub link
+  gitRepo = "https://github.com/vcscsvcscs/portfolio"
+  gitBranch = "master"
+
+# Output formats
+[outputs]
+  home = ["HTML", "RSS", "JSON"]
+
+# Markup settings
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
