--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,4 @@
 baseURL = 'https://vcscsvcscs.github.io/portfolio/'
-defaultContentLanguage = 'en'
 title = 'Csongor Csaba Vargha - Cloud Developer'
 
 # Use Hugo modules to add theme
@@ -7,21 +6,10 @@ title = 'Csongor Csaba Vargha - Cloud Developer'
     [[module.imports]]
         path = "github.com/hugo-toha/toha/v4"
 
-# Language Configuration
-[languages]
-  [languages.en]
-    languageName = "English"
-    title = "Csongor Csaba Vargha - Cloud Developer"
-    weight = 1
-  [languages.hu]
-    languageName = "Magyar"  
-    title = "Vargha Csongor Csaba - Felhő Fejlesztő"
-    weight = 2
-
 # Basic theme configuration
 [params]
   # Basic settings
-  showFlags = true
+  showFlags = false
   
   # GitHub link
   gitRepo = "https://github.com/vcscsvcscs/portfolio"
