--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
-baseURL = "http://www.example.com"
-title = "johndoe"
+baseURL = "https://vcscsvcscs.github.io/" # Adjust to your actual deployed URL
+title = "Csongor Csaba Vargha"
 theme = "hugo-coder"
 languageCode = "en"
 defaultContentLanguage = "en"
@@ -22,15 +22,18 @@ noClasses = false
 unsafe = true
 
 [params]
-author = "John Doe"
+author = "Csongor Csaba Vargha"
+designation = "Cloud Developer"
+location = "Budapest, Hungary"
+summary = "I am a cloud developer with experience in designing, developing and maintaining software in cloud native environment."
 # license = '<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA-4.0</a>'
-description = "John Doe's personal website"
-keywords = "blog,developer,personal"
-info = ["Full Stack DevOps", "Magician"]
+description = "Csongor Csaba Vargha's portfolio website"
+keywords = "cloud,data,ai,mlops,developer,portfolio,software"
+info = ["Cloud Developer","AI Developer","MLOps", "Budapest"]
 avatarURL = "images/avatar.jpg"
-#gravatar = "john.doe@example.com"
+#gravatar = "varghacsongorcsaba@gmail.com"
 dateFormat = "January 2, 2006"
-since = 2019
+since = 2022
 # Git Commit in Footer, uncomment the line below to enable it
 commit = "https://github.com/luizdepra/hugo-coder/tree/"
 # Right To Left, shift content direction for languages such as Arabic
@@ -55,6 +58,13 @@ customJS = []
 
 # Custom remote JS files
 customRemoteJS = []
+
+# Contact information (custom params structure you can template in layouts)
+[params.contactInfo]
+email = "varghacsongorcsaba@gmail.com"
+linkedin = "https://www.linkedin.com/in/csongorcsabavargha/"
+github = "https://github.com/vcscsvcscs"
+phone = "+36-20-337-9067"
 
 # If you want to use fathom(https://usefathom.com) for analytics, add this section
 # [params.fathomAnalytics]
@@ -145,37 +155,31 @@ author = "authors"
 name = "Github"
 icon = "fa-brands fa-github fa-2x"
 weight = 1
-url = "https://github.com/johndoe/"
-
-[[params.social]]
-name = "Gitlab"
-icon = "fa-brands fa-gitlab fa-2x"
-weight = 2
-url = "https://gitlab.com/johndoe/"
-
-[[params.social]]
-name = "Twitter"
-icon = "fa-brands fa-x-twitter fa-2x"
-weight = 3
-url = "https://twitter.com/johndoe/"
+url = "https://github.com/vcscsvcscs"
 
 [[params.social]]
 name = "LinkedIn"
 icon = "fa-brands fa-linkedin fa-2x"
-weight = 4
-url = "https://www.linkedin.com/in/johndoe/"
+weight = 2
+url = "https://www.linkedin.com/in/csongorcsabavargha/"
 
 [[params.social]]
-name = "Medium"
-icon = "fa-brands fa-medium fa-2x"
-weight = 5
-url = "https://medium.com/@johndoe"
+name = "Email"
+icon = "fa-solid fa-envelope fa-2x"
+weight = 3
+url = "mailto:varghacsongorcsaba@gmail.com"
+
+[[params.social]]
+name = "Phone"
+icon = "fa-solid fa-phone fa-2x"
+weight = 4
+url = "tel:+36203379067"
 
 [[params.social]]
 name = "RSS"
 icon = "fa-solid fa-rss fa-2x"
-weight = 6
-url = "https://myhugosite.com/index.xml"
+weight = 5
+url = "index.xml"
 rel = "alternate"
 type = "application/rss+xml"
 
