--- a/hugo.toml
+++ b/hugo.toml
@@ -29,7 +29,7 @@ summary = "I am a cloud developer with experience in designing, developing and m
 # license = '<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA-4.0</a>'
 description = "Csongor Csaba Vargha's portfolio website"
 keywords = "cloud,data,ai,mlops,developer,portfolio,software"
-info = ["Cloud Developer","AI Developer","MLOps", "Budapest"]
+info = ["Cloud Developer", "Budapest"]
 avatarURL = "images/avatar.jpg"
 #gravatar = "varghacsongorcsaba@gmail.com"
 dateFormat = "January 2, 2006"
@@ -206,32 +206,123 @@ name = "Contact me"
 weight = 5
 url = "contact/"
 
-[languages.pt-br]
-languageName = ":brazil:"
-title = "João Ninguém"
 
-[languages.pt-br.params]
-author = "João Ninguém"
-info = "Full Stack DevOps e Mágico"
-description = "Sítio pessoal de João Ninguém"
-keywords = "blog,desenvolvedor,pessoal"
+[languages.fi]
+languageName = ":finland:"
+title = "Csongor Csaba Vargha"
 
-[[languages.pt-br.menu.main]]
-name = "Sobre"
+[languages.fi.params]
+author = "Csongor Csaba Vargha"
+info = "Pilvipalvelu Kehittäjä"
+description = "Csongor Csaba Varghan portfolio"
+keywords = "pilvi,kehittäjä,ohjelmisto,portfolio"
+
+[[languages.fi.menu.main]]
+name = "Tietoa"
 weight = 1
 url = "about/"
 
-[[languages.pt-br.menu.main]]
+[[languages.fi.menu.main]]
+name = "Blogi"
+weight = 2
+url = "posts/"
+
+[[languages.fi.menu.main]]
+name = "Projektit"
+weight = 3
+url = "projects/"
+
+[[languages.fi.menu.main]]
+name = "Yhteys"
+weight = 5
+url = "contact/"
+
+[languages.hu]
+languageName = ":hungary:"
+title = "Csongor Csaba Vargha"
+
+[languages.hu.params]
+author = "Csongor Csaba Vargha"
+info = "Felhő fejlesztő"
+description = "Vargha Csongor Csaba portfóliója"
+keywords = "felhő,fejlesztő,szoftver,portfólió"
+
+[[languages.hu.menu.main]]
+name = "Rólam"
+weight = 1
+url = "about/"
+
+[[languages.hu.menu.main]]
 name = "Blog"
 weight = 2
 url = "posts/"
 
-[[languages.pt-br.menu.main]]
-name = "Projetos"
+[[languages.hu.menu.main]]
+name = "Projektek"
 weight = 3
 url = "projects/"
 
-[[languages.pt-br.menu.main]]
-name = "Contato"
+[[languages.hu.menu.main]]
+name = "Kapcsolat"
+weight = 5
+url = "contact/"
+
+[languages.de]
+languageName = ":de:"
+title = "Csongor Csaba Vargha"
+
+[languages.de.params]
+author = "Csongor Csaba Vargha"
+info = "Cloud Entwickler"
+description = "Portfolio von Csongor Csaba Vargha"
+keywords = "cloud,entwickler,software,portfolio"
+
+[[languages.de.menu.main]]
+name = "Über"
+weight = 1
+url = "about/"
+
+[[languages.de.menu.main]]
+name = "Blog"
+weight = 2
+url = "posts/"
+
+[[languages.de.menu.main]]
+name = "Projekte"
+weight = 3
+url = "projects/"
+
+[[languages.de.menu.main]]
+name = "Kontakt"
+weight = 5
+url = "contact/"
+
+[languages.es]
+languageName = ":es:"
+title = "Csongor Csaba Vargha"
+
+[languages.es.params]
+author = "Csongor Csaba Vargha"
+info = "Desarrollador Cloud"
+description = "Portafolio de Csongor Csaba Vargha"
+keywords = "cloud,desarrollador,software,portafolio"
+
+[[languages.es.menu.main]]
+name = "Acerca de"
+weight = 1
+url = "about/"
+
+[[languages.es.menu.main]]
+name = "Blog"
+weight = 2
+url = "posts/"
+
+[[languages.es.menu.main]]
+name = "Proyectos"
+weight = 3
+url = "projects/"
+
+[[languages.es.menu.main]]
+name = "Contacto"
 weight = 5
 url = "contact/"
